# jellyfin-rpc

./: .gitignore  README.md  jellyfin_rpc.ini  jellyfin_rpc.py  main.py  main.spec  pyproject.toml
.github/workflows/: pyinstaller.yaml
images/: icon.icns
src/jellyfin_rpc/: __init__.py  app.py  jellyfin_rpc.py  main.py
