[project]
name = "jellyfin-rpc"
version = "1.7.4"
description = "Discord RPC for Jellyfin"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "jellyfin-apiclient-python>=1.11.0",
    "pypresence@git+https://github.com/qwertyquerty/pypresence",
]

[project.optional-dependencies]
gui = ["customtkinter", "pystray>=0.19.5", "pyinstaller>=6.19.0"]

[dependency-groups]
dev = ["ruff>=0.15.11", "mypy>=1.20.1", "types-requests"]

[project.urls]
homepage = "https://github.com/kennethsible/jellyfin-rpc"

[project.scripts]
jellyfin-rpc = "jellyfin_rpc.main:main"

[tool.uv.sources]
customtkinter = { git = "https://github.com/TomSchimansky/CustomTkinter.git", rev = "c12c9ab6874ad26b525bad19d912a9ff93f3206d" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
ignore_missing_imports = true
untyped_calls_exclude = ["pypresence"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
