[project]
name = "jellyfin-rpc"
version = "1.8.0"
description = "Discord RPC for Jellyfin"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.14"
dependencies = [
    "jellyfin-apiclient-python>=1.12.0",
    "pypresence@git+https://github.com/qwertyquerty/pypresence",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2.2", "pystray>=0.19.5", "pyinstaller>=6.20.0"]

[dependency-groups]
dev = ["ruff>=0.15.15", "mypy>=2.1.0", "types-requests"]

[project.urls]
homepage = "https://github.com/kennethsible/jellyfin-rpc"

[project.scripts]
jellyfin-rpc = "jellyfin_rpc.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
ignore_missing_imports = true
untyped_calls_exclude = ["pypresence"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"
