[project]
name = "jellyfin-rpc"
version = "1.8.1"
description = "Discord RPC for Jellyfin"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "aiohttp-client-cache>=0.14.3",
    "requests>=2.34.2",
    "certifi>=2026.5.20",
    "langcodes>=3.5.1",
    "language_data>=1.4.0",
    "pypresence@git+https://github.com/qwertyquerty/pypresence",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2.2", "pystray>=0.19.5", "pyinstaller>=6.21.0"]

[dependency-groups]
dev = ["ruff>=0.15.17", "mypy>=2.1.0", "types-requests"]

[project.urls]
homepage = "https://github.com/kennethsible/jellyfin-rpc"

[project.scripts]
jellyfin-rpc = "jellyfin_rpc.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
ignore_missing_imports = true
untyped_calls_exclude = ["pypresence"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"
